# samosa-waveform-model

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: basic_usage.ipynb  generate_example_waveform.py  samosaplus_ocean_forward_model.py
src/samosa_waveform_model/: __init__.py  dataclasses.py  funcs.py  funcs.pyx  funcs_py.py  lut.py  model.py  scenarios.py  waveform_fit.py
